[gd_scene load_steps=4 format=3 uid="uid://bypxdqngg3gml"]

[ext_resource type="Texture2D" uid="uid://bnbp83o321xiw" path="res://Ak-fur7.png" id="1_b2ir8"]
[ext_resource type="Script" path="res://gun.gd" id="1_nt7ir"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx4fh"]
size = Vector2(16, 6)

[node name="Gun" type="Node2D" node_paths=PackedStringArray("ShootPos", "shotCol")]
script = ExtResource("1_nt7ir")
ShootPos = NodePath("ShootPos")
shotCol = NodePath("shotCol")

[node name="gunSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_b2ir8")

[node name="ShootPos" type="Marker2D" parent="."]
position = Vector2(8, -1.5)

[node name="Equip" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Equip"]
visible = false
shape = SubResource("RectangleShape2D_gx4fh")

[node name="shotCol" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Equip" to="." method="_on_equip_area_entered"]
[connection signal="timeout" from="shotCol" to="." method="_on_shot_col_timeout"]
